<resources>
    <string name="app_name">Numerology Magic</string>
    <string name="contact_1">Contact</string>
    <string name="contact_2">Consultant : Dr. Sandhya Jadhav</string>
    <string name="contact_3">Head Office : </string>
    <string name="contact_4">709, Prabhat Center Annexe,</string>
    <string name="contact_5">Sector - 1A, CBD Belapur, </string>
    <string name="contact_6">Navi Mumbai - 400 614</string>
    <string name="contact_7">Branch Office : </string>
    <string name="contact_8">“Aashirwad”, 268/3/6, Amrut Colony,</string>
    <string name="contact_9">Daulat Nagar, Karanje Terfe, Satara</string>
    <string name="contact_10">415 001</string>
    <string name="contact_11">Visiting Place : </string>
    <string name="contact_12">Shree Khandeshawar Mahadev Mandir,</string>
    <string name="contact_13">Khandeshwar Lake, Khandeshwar Lake Road, </string>
    <string name="contact_14">Park Sight Society, Sector - 6, Khanda Colony, </string>
    <string name="contact_15">Panvel, Navi Mumbai, Maharashtra 410206</string>
    <string name="contact_16">Visiting Place : </string>
    <string name="contact_17">Shop No. BS-02, 108 Greens, Beed</string>
    <string name="contact_18">Bypass, Opp. Kamalnayan Bajaj </string>
    <string name="contact_19">Hospital, Aurangabad 431005</string>
    <string name="contact_20">Mobile : 8655990799</string>
    <string name="contact_21">E-mail : drsandhya@vastoshapati.com</string>
    <string name="contact_22">vastoshapati@gmail.com</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="babyName_result_Mulank">This baby name matches your mulank number. This baby name is good for you.</string>
    <string name="babyName_result_Bad">This baby name does not match your lucky and mulank number. This baby name is not good for you.</string>
    <string name="babyName_result_Lucky">This baby name matches your lucky number. This baby name is very good for you.</string>
    <string name="address_result_Mulank">This address matches your mulank number. This address is good for you.</string>
    <string name="address_result_Bad">This address does not match your lucky and mulank number. This address is not good for you.</string>
    <string name="address_result_Lucky">This address matches your lucky number. This address is very good for you.</string>
    <string name="companyName_result_Mulank">This company name matches your mulank number. This company name is good for you.</string>
    <string name="companyName_result_Bad">This company does not match your lucky and mulank number. This company name is not good for you.</string>
    <string name="companyName_result_Lucky">This company name matches your lucky number. This company name is very good for you.</string>
    <string name="mobileNumber_result_Mulank">This mobile number matches your mulank number. This mobile number is good for you.</string>
    <string name="mobileNumber_result_Bad">This mobile number does not match your lucky and mulank number. This mobile number is good for you.</string>
    <string name="mobileNumber_result_Lucky">This mobile number matches your lucky number. This mobile number is good for you.</string>
    <string name="vehicleNumber_result_Mulank">This vehicle number matches your mulank number. This vehicle number is good for you.</string>
    <string name="vehicleNumber_result_Bad">This vehicle number does not match your lucky and mulank number. This vehicle number is good for you.</string>
    <string name="vehicleNumber_result_Lucky">This vehicle number matches your lucky number. This vehicle number is good for you.</string>
    <string name="yourName_result_Mulank">This name matches your mulank number. This name is good for you.</string>
    <string name="yourName_result_Bad">This name does not matches your mulank number. This name is not good for you.</string>
    <string name="yourName_result_Lucky">This name matches your mulank number. This name is good for you.</string>
    <string name="matchMaking_result_Good">This is a good match.</string>
    <string name="matchMaking_result_Bad">This is not a good match.</string>
    <string name="text_result">Result</string>
    <string name="babyname_language">Baby Name</string>
    <string name="companyname_language">Company Name</string>
    <string name="address_language">Address</string>
    <string name="mobilenumber_language">Mobile Number</string>
    <string name="matchmaking_language">Match Making</string>
    <string name="vehiclenumber_language">Vehicle Number</string>
    <string name="yourname_language">Your Name</string>
    <string name="ourwebsite_language">Website</string>
    <string name="contactUs_language">Contact Us</string>
    <string name="turnUp_language">TurnUp Idea Pvt Ltd 2018</string>
    <string name="my_preference">"magic.numerology.ideas.turnup.numerologymagic.MyPref"</string>
    <string name="my_preference_key">"magic.numerology.ideas.turnup.numerologymagic.MyPrefkey"</string>
    <string name="contactUs">Type your Address here</string>
    <string name="dateofbirth1">dd</string>
    <string name="dateofbirth2">mm</string>
    <string name="dateofbirth3">yyyy</string>
    <string name="address1">Type your Address here</string>
    <string name="babyname1">Type your Baby Name here</string>
    <string name="companyname1">Type your Company Name here</string>
    <string name="matchmaking1">Female Dob</string>
    <string name="matchmaking2">Male Dob</string>
    <string name="mobilenumber1">Type your Mobile Number here</string>
    <string name="vehiclenumber1">Type your Vehicle Number here</string>
    <string name="yourname1">Type your Name here</string>
    <string name="luckyNumber">Your Lucky Number :-</string>
    <string name="karmicNumber">Your Mulank Number :-</string>
    <string name="mulank">Mulank Number :-</string>
    <string name="bestday">Best Day :-</string>
    <string name="bestmonth">Best Month :-</string>
    <string name="besttime">Best Time :-</string>
    <string name="datelord">Lord :-</string>
    <string name="element">Element :-</string>
    <string name="luckycolor">Lucky Color :-</string>
    <string name="luckygem">Lucky Gem :-</string>
    <string name="favourabledirection">Favourable Direction :-</string>
    <string name="favourabletaste">Favourable Taste :-</string>
    <string name="positivetraits">Positive Traits :-</string>
    <string name="negativetraits">Negative Traits :-</string>
    <string name="friendlynumbers">Friendly Numbers :-</string>
    <string name="neutralnumbers">Neutral Numbers :-</string>
    <string name="enemynumbers">Enemy Numbers :-</string>
    <string name="luckymetal">Lucky Metal :-</string>
    <string name="dateLord1">Sun</string>
    <string name="element1">Fire</string>
    <string name="luckyColor1">Gold</string>
    <string name="luckyGem1">Ruby</string>
    <string name="favourableDirection1">East</string>
    <string name="favourableTatse1">Hot/ spicy</string>
    <string name="positiveTraits1">They are ambitious and determined, a leader seeking opportunities. There is a great deal of honesty and
        loyalty in this character. They are a loyal friend and strictly fair in business dealings.</string>
    <string name="negativeTraits1">They are apt to dominate situations and people; the home, the spouse,
        the family and the business. Emotions arent strong in this nature.</string>
    <string name="friendlyNumbers1">2, 7, 5</string>
    <string name="neutralNumbers1">3, 9, 4</string>
    <string name="enemyNumbers1">6,8</string>
    <string name="luckyMetal1">Gold</string>
    <string name="bestday1">Sunday, Thursday</string>
    <string name="bestmonth1">January, March, May, July, October</string>
    <string name="besttime1">Between 20 June and 21 August every year</string>
    <string name="result1a">1. You have the power of the Sun planet. Therefore, you have the properties of the sun.</string>
    <string name="result1b">2. Creativity, agility, excitement, art and cleverness are your special qualities.</string>
    <string name="result1c">3. Your personality is passionate. You naturally mix with the nature. You enjoy your life atmost.</string>
    <string name="result1d">4. Although it has been a long way to describe a subject, but you prefer not being able to live with your changing thoughts for a long time.</string>
    <string name="result1e">5. With the help of self-realization, you can take a quick look at any subject and take part in the conversation about that topic.</string>
    <string name="result1f">6. Your cleverness affects others. With this quality, you can successfully convent the meeting.</string>
    <string name="result1g">7.  You have strong willpower. There is complete freedom in thought and action. If you are getting leadership, then you will be interested in some work.</string>
    <string name="result1h">8.  If you are social person then you have good knowledge of obligations and social rules. You are sometimes the Ideal, sometimes Vigilant, in this way it seems you have two nature.</string>
    <string name="result1i">9. Sometimes you are stubborn and selfish. </string>
    <string name="result1j">10. Despite the inherent power of doing research, due to the playful nature, they can not make themselves a separate place in any one field.</string>
    <string name="dateLord2">Moon</string>
    <string name="element2">Water</string>
    <string name="luckyColor2">White</string>
    <string name="luckyGem2">Pearl</string>
    <string name="favourableDirection2">North- West</string>
    <string name="favourableTatse2">Salt, Alkaline</string>
    <string name="positiveTraits2">They are sympathetic, extremely concerned and devoted. The nature tends to be very sensitive to others,
        always tactful and diplomatic. They are rather emotional. They are persuasive, but in a very quiet way, never forceful.</string>
    <string name="negativeTraits2">They are over-sensitive, with a delicate ego that is too easily hurt. They are timid or fearful sometimes.</string>
    <string name="friendlyNumbers2">5, 6, 3, 8</string>
    <string name="neutralNumbers2">1, 4</string>
    <string name="enemyNumbers2">7, 9</string>
    <string name="luckyMetal2">Silver</string>
    <string name="bestday2">Monday, Wednesday</string>
    <string name="bestmonth2">February, April, August, November</string>
    <string name="besttime2">Between 20 July and 20 August every year</string>
    <string name="result2a">1. You are the moon shadow on.</string>
    <string name="result2b">2. You have a great imagination, you are from a fascinating and dreamy character.</string>
    <string name="result2c">3.  You are a philosopher and you are interested in doing the things differently.</string>
    <string name="result2d">4. Due to the high intellectual level, you do not like to be with other people.
    Despite your social attitude, you feel fully involved in the public.</string>
    <string name="result2e">5. You are very affectionate and popular. </string>
    <string name="result2f">6.  You have the beauty of natural beauty such as sea, flower, beauty of the universe and the vastness of the sky.</string>
    <string name="result2g">7.  You love the stars of heaven, spend time watching stars, and enjoy it.</string>
    <string name="result2h">8.   Your nature is unstable and playful, and you want to constantly change your life. The long distance journey looks more enjoyable.</string>
    <string name="result2i">9. You like to be in the world of dream.</string>
</resources>