<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@mipmap/landingpage"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Home"
    tools:showIn="@layout/app_bar_home">

    <ScrollView
        android:id="@+id/scroll_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/linear_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text1_home">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/home_lucky"
                        android:textSize="16sp"
                        android:text="@string/luckyNumber"
                        android:typeface="serif"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/font_edittext" />
                    <TextView
                        android:id="@+id/home_text"
                        android:textSize="25pt"
                        android:typeface="serif"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:maxLength="1"
                        android:fontFamily="@font/font_edittext"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginLeft="45dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/home_mulank"
                        android:textSize="16sp"
                        android:text="@string/karmicNumber"
                        android:typeface="serif"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/font_edittext" />
                    <TextView
                        android:id="@+id/home_text_karmicNo"
                        android:textSize="25pt"
                        android:typeface="serif"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:maxLength="1"
                        android:fontFamily="@font/font_edittext"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/text1_home"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/dob"/>
            <EditText
                android:id="@+id/edit1_home"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@mipmap/dobinput"
                android:digits="0123456789"
                android:fontFamily="@font/font_edittext"
                android:hint="@string/dateofbirth1"
                android:maxLength="2"
                android:textAlignment="center"
                android:textColor="@color/edittextcolor"
                android:textColorHint="@color/edittextcolor"
                android:textSize="16sp"
                android:textStyle="bold" />
            <EditText
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/edittextcolor"
                android:textColorHint="@color/edittextcolor"
                android:layout_gravity="center"
                android:id="@+id/edit2_home"
                android:background="@mipmap/dobinput"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:hint="@string/dateofbirth2"
                android:maxLength="2"
                android:digits="0123456789"
                android:fontFamily="@font/font_edittext"
                android:textAlignment="center"/>
            <EditText
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/edittextcolor"
                android:textColorHint="@color/edittextcolor"
                android:layout_gravity="center"
                android:id="@+id/edit3_home"
                android:background="@mipmap/dobinput"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:hint="@string/dateofbirth3"
                android:maxLength="4"
                android:digits="0123456789"
                android:fontFamily="@font/font_edittext"
                android:textAlignment="center"/>
            <Button
                android:layout_gravity="center"
                android:id="@+id/button1_home"
                android:background="@mipmap/clickbutton"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="144dp"
                android:layout_below="@+id/linear_home"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>